Fix input position

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,8 @@
-<p class="search">Search stations</p>
+<div class="container">
+    <p class="search">Search stations</p>
 
 <app-autocomplete [suggestions]="stations"></app-autocomplete>
 
 <p class="error">{{ errorMessage }}</p>
+
+</div>
