--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,3 +1,14 @@
+.container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  app-autocomplete {
+    display: flex;
+    display: block;
+    width: 400px;
+  }
+}
+
 %centered {
   display: flex;
   justify-content: center;
